@@ -76,6 +76,30 @@
 	<build>
 		<plugins>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-dependency-plugin</artifactId>
+			    <version>3.6.1</version>
+			    <executions>
+			        <execution>
+			            <id>initialize-agent</id>
+			            <phase>initialize</phase>
+			            <goals>
+			                <goal>properties</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>3.5.2</version>
+			    <configuration>
+			        <argLine>
+			            -Dnet.bytebuddy.experimental=true -Xshare:off -javaagent:"${org.mockito:mockito-core:jar}"
+			        </argLine>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
